objects/report_sender__Post_Update_Custom_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>report_sender__Crypto_Key__c</fullName>
        <defaultValue>&quot;PeeklogicCryptoMessagesKeyString&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Enable_Error_Emails__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Error Emails to be sent.</description>
        <label>Enable Error Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__ListViewColumnsSettingId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ListViewColumnsSettingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Use_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_sender__ifFirstRun__c</fullName>
        <defaultValue>true</defaultValue>
        <description>First run after update checkbox</description>
        <label>ifFirstRun</label>
        <type>Checkbox</type>
    </fields>
    <label>Post Update Custom Settings</label>
</CustomObject>